# RAG-Chatbot

./: README.md
rag_be/: .gitignore  main.py  pyproject.toml
rag_fe/: index.html  package-lock.json  package.json
rag_fe/src/: App.css  App.jsx
rag_fe/src/components/: InputFeild.jsx  Navbar.jsx  TradeMark.jsx  WelcomeMessege.jsx
